--- a/colin_v1.ipynb
+++ b/colin_v1.ipynb
@@ -30,6 +30,109 @@
     "collapsed": false
    },
    "id": "750c512e92a3b884"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "tokenizer = AutoTokenizer.from_pretrained(\"gpt2\")\n",
+    "model = AutoModelForCausalLM.from_pretrained(\"gpt2\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "5caab897e20d9bbf"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Load Dataset"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "f0f81dd73e944e68"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Model Training"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "2a8fdde8b991f2a9"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "# Save trained model\n",
+    "torch.save(model.state_dict(), 'models/model_v1.pt')"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "5d485454ae886ac8"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Output generation"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "dd54268f25122d95"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "prompt = \"This is the story of Glouse, a tribal archer, from glitter world\"\n",
+    "\n",
+    "input_ids = tokenizer(prompt, return_tensors=\"pt\").input_ids\n",
+    "# sample up to 30 tokens\n",
+    "torch.manual_seed(11)\n",
+    "list_out=[]\n",
+    "#['Today I believe we can finally get rid of discrimination,\" said Rep. Mark Pocan (D-Wis.).\\n\\n\"Just look at the']\n",
+    "for i in range (1):\n",
+    "    for j in range (8):\n",
+    "        outputs = model.generate(input_ids, do_sample=True, max_length=30, temperature =11.6+0.75*i,top_p=(j+1)/30,repetition_penalty=1.1)\n",
+    "        list_out.append(outputs)\n",
+    "\n",
+    "for i in range (1):\n",
+    "    for j in range (8):\n",
+    "        print(\"temperature =\",11.6+0.75*i,\"top_p=\",(j+1)/30)\n",
+    "        print(tokenizer.batch_decode(list_out[i*4+j], skip_special_tokens=True))"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "18e6f4d57ea4a710"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Note Area"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "c3d0f4e1db2bf892"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "330916891f9b4aec"
   }
  ],
  "metadata": {
