--- a/generate.ipynb
+++ b/generate.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "#import warnings\n",
@@ -28,8 +28,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-19T04:54:54.307464600Z",
-     "start_time": "2023-11-19T04:54:54.054740600Z"
+     "end_time": "2023-11-19T20:03:27.601993900Z",
+     "start_time": "2023-11-19T20:03:25.266758600Z"
     }
    },
    "id": "7225778f2adf6b7a"
@@ -46,13 +46,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-11-19T06:51:34.019023300Z",
-     "start_time": "2023-11-19T06:51:34.011204300Z"
+     "end_time": "2023-11-19T20:03:47.083836200Z",
+     "start_time": "2023-11-19T20:03:47.078386900Z"
     }
    },
    "outputs": [
@@ -65,7 +65,7 @@
     }
    ],
    "source": [
-    "model_path=\"ft1\"\n",
+    "model_path=\"ft2\"\n",
     "\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "print(\"using device \"+str(device))\n",
@@ -85,18 +85,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "# Load the fine-tuned GPT-2 tokenizer and model\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_path,local_files_only=True)\n",
-    "model = AutoModelForCausalLM.from_pretrained(model_path,local_files_only=True).to(device)"
+    "model = AutoModelForCausalLM.from_pretrained(model_path,local_files_only=True).to(device)\n",
+    "\n",
+    "#TODO baseline model for comparison"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-19T06:49:58.172850200Z",
-     "start_time": "2023-11-19T06:49:56.870733600Z"
+     "end_time": "2023-11-19T20:03:49.045530400Z",
+     "start_time": "2023-11-19T20:03:47.375534Z"
     }
    },
    "id": "efb029d7711eb82c"
@@ -113,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stderr",
@@ -168,26 +170,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['This is the story of [PAWN_nameDef], a combat medic: After escaping an orbital war, [PAWN] joined a squad that']\n",
-      "[\"This is the story of [PAWN_nameDef], a warlordess' child: Born in a seedy society, [PAWN]\"]\n",
-      "['This is the story of [PAWN_nameDef], a urbworld nerd: Growing up in an abandoned industrial world, [PAWN_']\n",
-      "['This is the story of [PAWN_nameDef], a engineer: [PAWN_nameDef] was an engineer employed in mines and working']\n",
-      "['This is the story of [PAWN_nameDef], a tinkerer: Spending most of [PAWN_possessive] adulthood']\n",
-      "['This is the story of [PAWN_nameDef], a space janitor: After an explosion on a construction site, [PAWN_name']\n",
-      "[\"This is the story of [PAWN_nameDef], a frontier child: It's always war on hills and mountains. Every kid has a story\"]\n",
-      "[\"This is the story of [PAWN_nameDef], a glitterworld tech prodigy: Born on an urbworld in the early '90\"]\n",
-      "['This is the story of [PAWN_nameDef], a combat fighter: Raised by guns and war, [PAWN_nameDef]']\n",
-      "['This is the story of [PAWN_nameDef], a sole survivor: After escaping a slaver camp on an uninhabited world, [']\n",
-      "['This is the story of [PAWN_nameDef], a navy tech officer: As a military science officer, an unethical man was in charge of']\n",
-      "['This is the story of [PAWN_nameDef], a war refugee: Born in a war-ravaged home, [PAWN] never']\n",
-      "['This is the story of [PAWN_nameDef], a ranger: Born on an urbworld, [PAWN_nameDef] learned']\n",
-      "['This is the story of [PAWN_nameDef], a space navy technician: Interstellar warfare, such battles for air space and on land quickly became']\n",
-      "['This is the story of [PAWN_nameDef], a space scientist: As an engineer, Lester set out on a scientific journey through space.']\n"
+      "['This is the story of [PAWN_nameDef], a herbalist: [PAWN_nameDef] lived in the forest near a village']\n",
+      "['This is the story of [PAWN_nameDef], a navy scientist: Interstellar warfare is won by technology, so glitterworld navies are always']\n",
+      "['This is the story of [PAWN_nameDef], a [PAWN_possessive] busy job and numerous nearby fast-food']\n",
+      "['This is the story of [PAWN_nameDef], a architect: [PAWN_nameDef] designed and constructed buildings. On [PA']\n",
+      "['This is the story of [PAWN_nameDef], a bodyguard: [PAWN_nameDef] protected whoever paid [PAWN_']\n",
+      "['This is the story of [PAWN_nameDef], a architect: [PAWN_nameDef] designed and constructed buildings. On [PA']\n",
+      "[\"This is the story of [PAWN_nameDef], a [PAWN_pronoun] didn't learn to read until age nine.: nan\"]\n",
+      "['This is the story of [PAWN_nameDef], a medieval lordling: [PAWN_nameDef] was a minor noble in an']\n",
+      "['This is the story of [PAWN_nameDef], a medieval doctor: [PAWN_nameDef] worked as a doctor on a medieval']\n",
+      "['This is the story of [PAWN_nameDef], a medieval farm oaf: Tilling, hoeing, guiding ox carts, pushing']\n",
+      "['This is the story of [PAWN_nameDef], a [PAWN_pronoun] refused to do any dumb labour [PAWN_']\n",
+      "['This is the story of [PAWN_nameDef], a housemate: As an adult, [PAWN_nameDef] kept house and']\n",
+      "['This is the story of [PAWN_nameDef], a sculptor: [PAWN_nameDef] started off sculpting person-sized']\n",
+      "['This is the story of [PAWN_nameDef], a navy scientist: Interstellar warfare is won by technology, so glitterworld navies are always']\n",
+      "['This is the story of [PAWN_nameDef], a sculptor: [PAWN_nameDef] started off sculpting person-sized']\n"
      ]
     }
    ],
    "source": [
-    "prompt =\"This is the story\"# of [PAWN_nameDef], a game developer, \"\n",
+    "prompt =\"This is the story of [PAWN_nameDef], a\"# housemate: \"\n",
     "input_ids = tokenizer(prompt, return_tensors=\"pt\").input_ids.to(device)\n",
     "\n",
     "print(input_ids.get_device())\n",
@@ -198,7 +200,8 @@
     "list_out=[]\n",
     "#['Today I believe we can finally get rid of discrimination,\" said Rep. Mark Pocan (D-Wis.).\\n\\n\"Just look at the']\n",
     "for i in range (num_output):\n",
-    "    outputs = model.generate(input_ids, do_sample=True, max_length=30, temperature =0.8+0.03*i,top_p=1,repetition_penalty=1.1)\n",
+    "    outputs = model.generate(input_ids, do_sample=True, max_length=30, temperature =0.8+0.03*i,top_p=1,repetition_penalty=1)\n",
+    "    #TODO output length\n",
     "    list_out.append(outputs)\n",
     "\n",
     "\n",
@@ -208,8 +211,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-19T06:51:48.972642500Z",
-     "start_time": "2023-11-19T06:51:43.743498800Z"
+     "end_time": "2023-11-19T20:14:21.536008800Z",
+     "start_time": "2023-11-19T20:14:18.985482900Z"
     }
    },
    "id": "b879e94ae8840ffe"
